@@ -1,7 +1,11 @@
 == 0.5.2
 
+* Enhancements
+  * Restructured login page to give clearer distinctions between all of the login types
+
 * Bug Fix
   * Removed TableScroll that was causing the column headers to not properly line up in some browsers
+  * Fixed the link to the RSS feed
 
 == 0.5.1
 
